added link to gh

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
   </div>
 
+  <a href="https://github.com/smsohan/angular_wizard">SourceCode on Github</a>
+
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </body>
