--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+  <a href="https://github.com/smsohan/angular_wizard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+
   <div ng-controller="WizardController">
 
     <script id="wizard.html" type="text/ng-template">
